demo-kubernetes-components/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
   name: mongo-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: hccs-console.heiway.net/demo
     http:
       paths: 
       - path: /
         backend:
           serviceName: mongo-express-service
           servicePort: 8080
